--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
 	<!-- MAIN CSS -->
+	<link rel="stylesheet" href="./css/common.css" />
 	<link rel="stylesheet" href="./css/main.css" />
 
 	<!-- LODASH JS -->
@@ -65,6 +66,7 @@
 
 	<!-- MAIN JS -->
 	<script defer src="./js/youtube.js"></script>
+	<script defer src="./js/common.js"></script>
 	<script defer src="./js/main.js"></script>
 
 
